# nn-demo

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
data/: arch.txt
nndemo/: CMakeLists.txt
nndemo/include/nndemo/: Data.h  FileReader.h  NeuralNet.h
nndemo/src/: Data.cpp  FileReader.cpp  NeuralNet.cpp
nndemo/test/: testlib.cpp
python/: nntf.py  nnvecs.py  readme.md
